# api/api.yaml
@@ -1683,7 +1683,7 @@ paths:
                 $ref: '#/components/schemas/StatusCode200'
   /users/subscriptions:
     get:
-      deprecated: true
+      deprecated: false
       tags:
         - subscription
       summary: get all subs for self user
@@ -1730,19 +1730,17 @@ paths:
                             item:
                               $ref: '#/components/schemas/ItemMiniSub'
     post:
-      deprecated: true
+      deprecated: false
       tags:
         - subscription
       summary: add {itemId} to subs
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                itemId:
-                  type: integer
-                  example: 459
+      parameters:
+        - name: itemId
+          in: query
+          required: true
+          schema:
+            type: integer
+            example: 15
       responses:
         200:
           description: successful operation
@@ -1759,7 +1757,7 @@ paths:
           type: integer
           example: 89
     delete:
-      deprecated: true
+      deprecated: false
       tags:
         - subscription
       responses:
@@ -1771,7 +1769,7 @@ paths:
                 $ref: '#/components/schemas/StatusCode200'
   /users/notifications:
     get:
-      deprecated: true
+      deprecated: false
       tags:
         - notification
       responses:
@@ -1804,7 +1802,7 @@ paths:
           type: integer
           example: 848
     post:
-      deprecated: true
+      deprecated: false
       tags:
         - notification
       summary: send notification to user
@@ -1826,7 +1824,20 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/StatusCode200'
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: ok
+                  payload:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                        example: 2
   /users/notifications/{notificationId}:
     parameters:
       - name: notificationId
@@ -1836,7 +1847,7 @@ paths:
           type: integer
           example: 56
     patch:
-      deprecated: true
+      deprecated: false
       tags:
         - notification
       summary: to open and read notification
@@ -1858,7 +1869,7 @@ paths:
                   payload:
                     $ref: '#/components/schemas/Notification'
     delete:
-      deprecated: true
+      deprecated: false
       tags:
         - notification
       responses:
