# internal/app/handler/subscription.go
@@ -1,0 +1,91 @@
+package handler
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/procat-hq/procat-backend/internal/app/custom_errors"
+	"github.com/procat-hq/procat-backend/internal/app/model"
+	"net/http"
+	"strconv"
+)
+
+func (h *Handler) GetAllSubscriptions(c *gin.Context) {
+	limit := c.Query("limit")
+	if limit == "" {
+		limit = "10"
+	}
+
+	page := c.Query("page")
+	if page == "" {
+		page = "0"
+	}
+
+	userData, err := h.GetUserContext(c)
+	if err != nil {
+		custom_errors.NewErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	count, rows, err := h.services.Subscription.GetUserSubscriptions(userData.UserId, limit, page)
+	if err != nil {
+		custom_errors.NewErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, model.Response{
+		Status:  http.StatusOK,
+		Message: "ok",
+		Payload: gin.H{
+			"count": count,
+			"rows":  rows,
+		},
+	})
+}
+
+func (h *Handler) SubscribeToItem(c *gin.Context) {
+	itemIdInt, err := strconv.Atoi(c.Query("itemId"))
+	if err != nil {
+		custom_errors.NewErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+	userData, err := h.GetUserContext(c)
+	if err != nil {
+		custom_errors.NewErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	if err = h.services.Subscription.CreateSubscription(userData.UserId, itemIdInt); err != nil {
+		custom_errors.NewErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, model.Response{
+		Status:  http.StatusOK,
+		Message: "ok",
+		Payload: nil,
+	})
+}
+
+func (h *Handler) DeleteItemFromSubscriptions(c *gin.Context) {
+	subIdInt, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		custom_errors.NewErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	userData, err := h.GetUserContext(c)
+	if err != nil {
+		custom_errors.NewErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	if err = h.services.Subscription.DeleteSubscription(userData.UserId, subIdInt); err != nil {
+		custom_errors.NewErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, model.Response{
+		Status:  http.StatusOK,
+		Message: "ok",
+		Payload: nil,
+	})
+}
